Modify README , Basics

--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>practice-vue</title>
+    <title>Practice Vue</title>
   </head>
   <body>
     <noscript>
       <strong>We're sorry but practice-vue doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
+    
+    <!-- main.ts の $mount() の第1引数と一致させる -->
     <div id="app"></div>
+    
     <!-- built files will be auto injected -->
   </body>
 </html>
